Update popup menu structure (#1301)
* Wrap menu items in popup-menu-body

* Use bodyNode instead of node

* Update selector

* Update _setPosition to not use items

--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -1912,20 +1912,20 @@
     </div>
 </div></template>
 
-<template id="profile-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu">
+<template id="profile-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu"><div class="popup-menu-body">
     <button class="popup-menu-item" data-menu-action="moveUp">Move up</button>
     <button class="popup-menu-item" data-menu-action="moveDown">Move down</button>
     <button class="popup-menu-item" data-menu-action="copyFrom">Copy from...</button>
     <button class="popup-menu-item" data-menu-action="editConditions">Edit conditions...</button>
     <button class="popup-menu-item" data-menu-action="duplicate">Duplicate</button>
     <button class="popup-menu-item" data-menu-action="delete">Delete</button>
-</div></div></template>
+</div></div></div></template>
 
-<template id="profile-condition-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu">
+<template id="profile-condition-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu"><div class="popup-menu-body">
     <button class="popup-menu-item" data-menu-action="resetValue">Reset value</button>
     <button class="popup-menu-item" data-menu-action="delete">Delete</button>
     <button class="popup-menu-item" data-menu-action="deleteGroup">Delete group</button>
-</div></div></template>
+</div></div></div></template>
 
 
 <!-- Dictionary modals -->
@@ -2119,11 +2119,11 @@
     </div>
 </div></template>
 
-<template id="dictionary-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu">
+<template id="dictionary-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu"><div class="popup-menu-body">
     <button class="popup-menu-item" data-menu-action="showDetails">Show details</button>
     <button class="popup-menu-item" data-menu-action="hideDetails" hidden>Hide details</button>
     <button class="popup-menu-item" data-menu-action="delete">Delete</button>
-</div></div></template>
+</div></div></div></template>
 
 <template id="secondary-search-dictionary-template"><div class="settings-item dictionary-item"><div class="settings-item-inner">
     <div class="settings-item-left">
@@ -2271,9 +2271,9 @@
     <button class="icon-button audio-source-menu-button" data-menu="audio-source-menu" data-menu-position="below left"><span class="icon-button-inner"><span class="icon" data-icon="kebab-menu"></span></span></button>
 </div></template>
 
-<template id="audio-source-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu">
+<template id="audio-source-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu"><div class="popup-menu-body">
     <button class="popup-menu-item" data-menu-action="remove">Remove</button>
-</div></div></template>
+</div></div></div></template>
 
 
 <!-- Scanning inputs modal -->
@@ -2410,12 +2410,12 @@
     </div>
 </div></template>
 
-<template id="scanning-inputs-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu">
+<template id="scanning-inputs-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu"><div class="popup-menu-body">
     <button class="popup-menu-item" data-menu-action="showAdvanced">Show advanced options</button>
     <button class="popup-menu-item" data-menu-action="hideAdvanced">Hide advanced options</button>
     <button class="popup-menu-item" data-menu-action="clearInputs">Clear inputs</button>
     <button class="popup-menu-item" data-menu-action="remove">Remove</button>
-</div></div></template>
+</div></div></div></template>
 
 
 <!-- Input action prevention modal -->
@@ -2676,11 +2676,11 @@
     <button class="anki-card-field-value-menu-button input-suffix-button input-suffix-icon-button" data-menu-position="below left"><span class="icon icon-button-icon-light" data-icon="material-down-arrow"></span></button>
 </div></template>
 
-<template id="anki-card-terms-field-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu"></div></div></template>
+<template id="anki-card-terms-field-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu"><div class="popup-menu-body"></div></div></div></template>
 
-<template id="anki-card-kanji-field-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu"></div></div></template>
+<template id="anki-card-kanji-field-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu"><div class="popup-menu-body"></div></div></div></template>
 
-<template id="anki-card-all-field-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu"></div></div></template>
+<template id="anki-card-all-field-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu"><div class="popup-menu-body"></div></div></div></template>
 
 
 <!-- Anki field template modals -->
@@ -2869,11 +2869,11 @@
     </div>
 </div></template>
 
-<template id="translation-text-replacement-entry-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu">
+<template id="translation-text-replacement-entry-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu"><div class="popup-menu-body">
     <button class="popup-menu-item" data-menu-action="showTest">Test</button>
     <button class="popup-menu-item" data-menu-action="hideTest">Hide test</button>
     <button class="popup-menu-item" data-menu-action="remove">Remove</button>
-</div></div></template>
+</div></div></div></template>
 
 
 <!-- Sentence parsing modal -->
@@ -2951,9 +2951,9 @@
     </td>
 </tr></template>
 
-<template id="sentence-termination-character-entry-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu">
+<template id="sentence-termination-character-entry-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu"><div class="popup-menu-body">
     <button class="popup-menu-item" data-menu-action="delete">Delete</button>
-</div></div></template>
+</div></div></div></template>
 
 
 <!-- Keyboard shortcuts modal -->
@@ -3039,11 +3039,11 @@
     </div>
 </div></div></template>
 
-<template id="hotkey-list-item-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu">
+<template id="hotkey-list-item-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu"><div class="popup-menu-body">
     <button class="popup-menu-item" data-menu-action="clearInputs">Clear input</button>
     <button class="popup-menu-item" data-menu-action="resetInput">Reset input</button>
     <button class="popup-menu-item" data-menu-action="delete">Delete</button>
-</div></div></template>
+</div></div></div></template>
 
 
 <!-- Scripts -->
