--- a/ext/bg/welcome.html
+++ b/ext/bg/welcome.html
@@ -327,9 +327,9 @@
     </div>
 </div></template>
 
-<template id="dictionary-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu">
+<template id="dictionary-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu"><div class="popup-menu-body">
     <button class="popup-menu-item" data-menu-action="delete">Delete</button>
-</div></div></template>
+</div></div></div></template>
 
 
 <!-- Scripts -->
