Audio button menu (#1302)
* Fix popup menus not stoping events

* Ensure non-stale use of buttons

* Enable popup menus on the popup/search pages

* Add audio menu

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -70,6 +70,8 @@
     </div>
 </div>
 
+<div id="popup-menus"></div>
+
 <!-- Scripts -->
 <script src="/mixed/lib/wanakana.min.js"></script>
 
@@ -96,6 +98,7 @@
 <script src="/mixed/js/hotkey-help-controller.js"></script>
 <script src="/mixed/js/hotkey-util.js"></script>
 <script src="/mixed/js/media-loader.js"></script>
+<script src="/mixed/js/popup-menu.js"></script>
 <script src="/mixed/js/scroll.js"></script>
 <script src="/mixed/js/text-scanner.js"></script>
 <script src="/mixed/js/html-template-collection.js"></script>
