--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -86,6 +86,8 @@
     </svg>
 </div>
 
+<div id="popup-menus"></div>
+
 <!-- Scripts -->
 <script src="/mixed/js/core.js"></script>
 <script src="/mixed/js/yomichan.js"></script>
@@ -113,6 +115,7 @@
 <script src="/mixed/js/hotkey-util.js"></script>
 <script src="/mixed/js/media-loader.js"></script>
 <script src="/mixed/js/panel-element.js"></script>
+<script src="/mixed/js/popup-menu.js"></script>
 <script src="/mixed/js/scroll.js"></script>
 <script src="/mixed/js/text-scanner.js"></script>
 <script src="/mixed/js/html-template-collection.js"></script>
