Replace "Disabled" with "None", for better terminology consistency (#1304)

--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -1219,10 +1219,10 @@
             </div>
             <div class="settings-item-right">
                 <select data-setting="parsing.readingMode">
+                    <option value="none">None</option>
                     <option value="hiragana">ひらがな</option>
                     <option value="katakana">カタカナ</option>
                     <option value="romaji">Romaji</option>
-                    <option value="none">Disabled</option>
                 </select>
             </div>
         </div></div>
