Defer load of iframe on the settings page (#1313)

--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -720,7 +720,7 @@
                     Pitch accents for terms and expressions can be shown if a dictionary supporting pitch accents is installed.
                     There are currently three different ways that pitch accents can be presented:
                 </p>
-                <iframe src="/bg/pitch-accents-preview.html" id="pitch-accents-preview-frame"></iframe>
+                <iframe data-src="/bg/pitch-accents-preview.html" id="pitch-accents-preview-frame" class="defer-load-iframe" data-parent-distance="1"></iframe>
                 <p>
                     <a class="more-toggle" data-parent-distance="3">Less&hellip;</a>
                 </p>
