--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -162,7 +162,7 @@
                 </div>
 
                 <div class="checkbox options-advanced ignore-form-changes" data-hide-for-browser="firefox-mobile">
-                    <label><input type="checkbox" id="enable-clipboard-popups"> Enable native popups when copying Japanese text</label>
+                    <label><input type="checkbox" id="clipboard-enable-background-monitor"> Enable native popups when copying Japanese text</label>
                 </div>
 
                 <div class="checkbox options-advanced">
