Remove the dictionary tag from the definitionTags (#1324)
* Remove dictionary tag from term definitionTags and kanji tags

* Update test data

* Update templates

* Update tests

* Update information

--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -2627,6 +2627,10 @@
                     <td>List of definitions for the term in a more compact format.</td>
                 </tr>
                 <tr>
+                    <td><code class="anki-field-marker">{glossary-no-dictionary}</code></td>
+                    <td>List of definitions for the term, except the dictionary tag is omitted.</td>
+                </tr>
+                <tr>
                     <td><code class="anki-field-marker">{pitch-accents}</code></td>
                     <td>List of pitch accent downstep notations for the term.</td>
                 </tr>
