Settings and welcome page improvements (#1326)
* Update wording to be less repetitive

* Remove the shadow theme option from the welcome page, to avoid confusion

* Update input sizes

* Update select text to not clip the triangle icon

* Update wording

* Update descriptions

* Remove "popup" to not exclude the search page

--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -579,7 +579,7 @@
                     <div class="settings-item-group-item">
                         <div class="settings-item-group-item-label">Shadow</div>
                         <select data-setting="general.popupOuterTheme" class="short-width short-height">
-                            <option value="auto">Auto-detect</option>
+                            <option value="auto">Auto</option>
                             <option value="default">Light</option>
                             <option value="dark">Dark</option>
                         </select>
@@ -876,9 +876,9 @@
             </div>
             <div class="settings-item-right">
                 <select data-setting="general.popupVerticalTextPosition">
-                    <option value="default">Same as for horizontal text</option>
-                    <option value="before">Before text reading direction</option>
-                    <option value="after">After text reading direction</option>
+                    <option value="default">Same as horizontal text</option>
+                    <option value="before">Before reading direction</option>
+                    <option value="after">After reading direction</option>
                     <option value="left">Left of text</option>
                     <option value="right">Right of text</option>
                 </select>
