--- a/ext/bg/welcome.html
+++ b/ext/bg/welcome.html
@@ -40,16 +40,16 @@
             </div></div></div>
             <div class="settings-item-children settings-item-children-group">
                 <div class="settings-item"><div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
-                    The <img src="/mixed/img/cog.svg" class="inline-icon" alt=""> <em>cog</em> button will open the settings page.
+                    The <img src="/mixed/img/cog.svg" class="inline-icon" alt=""> <em>cog</em> button will open the <a href="settings2.html" target="_blank" rel="noopener">Settings</a> page.
                 </div></div></div></div>
                 <div class="settings-item"><div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
-                    The <img src="/mixed/img/magnifying-glass.svg" class="inline-icon" alt=""> <em>magnifying glass</em> button will open a search page,
+                    The <img src="/mixed/img/magnifying-glass.svg" class="inline-icon" alt=""> <em>magnifying glass</em> button will open the <a href="/bg/search.html" target="_blank" rel="noopener">Search</a> page,
                     enabling text and terms to be looked up using the installed dictionaries.
                     This can even be used in offline mode!
                 </div></div></div></div>
                 <div class="settings-item"><div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
-                    The <img src="/mixed/img/question-mark-circle.svg" class="inline-icon" alt=""> <em>question mark</em> button will open a page
-                    with some general information about Yomichan.
+                    The <img src="/mixed/img/question-mark-circle.svg" class="inline-icon" alt=""> <em>question mark</em> button will open the <a href="/bg/info.html" target="_blank" rel="noopener">Information</a> page,
+                    which has some helpful information and links about Yomichan.
                 </div></div></div></div>
             </div>
         </div>
@@ -74,12 +74,12 @@
         </div>
         <div class="settings-item">
             <div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
-                After dictionaries have been installed, webpage text can be scanned by moving the cursor while holding the scanning modifier key.
-                The default key is <kbd>Shift</kbd>, which can be configured below.
+                After dictionaries have been installed, webpage text can be scanned by moving the cursor while holding a modifier key.
+                The default key is <kbd>Shift</kbd>, which can be disabled or configured below.
             </div></div></div>
             <div class="settings-item-children settings-item-children-group">
                 <div class="settings-item"><div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
-                    Clicking the <img src="/mixed/img/play-audio.svg" class="inline-icon" alt=""> <em>speaker</em> button of an entry in the popup search results
+                    Clicking the <img src="/mixed/img/play-audio.svg" class="inline-icon" alt=""> <em>speaker</em> button of an entry in the search results
                     will play an audio clip of a term's pronunciation using an online dictionary, if available.
                 </div></div></div></div>
                 <div class="settings-item"><div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
@@ -167,28 +167,15 @@
                 <div class="settings-item-description">Adjust the style of the popup.</div>
             </div>
             <div class="settings-item-right">
-                <div class="settings-item-group">
-                    <div class="settings-item-group-item">
-                        <div class="settings-item-group-item-label">Body</div>
-                        <select data-setting="general.popupTheme" class="short-width short-height">
-                            <option value="default">Light</option>
-                            <option value="dark">Dark</option>
-                        </select>
-                    </div>
-                    <div class="settings-item-group-item">
-                        <div class="settings-item-group-item-label">Shadow</div>
-                        <select data-setting="general.popupOuterTheme" class="short-width short-height">
-                            <option value="auto">Auto-detect</option>
-                            <option value="default">Light</option>
-                            <option value="dark">Dark</option>
-                        </select>
-                    </div>
-                </div>
+                <select data-setting="general.popupTheme" class="short-width">
+                    <option value="default">Light</option>
+                    <option value="dark">Dark</option>
+                </select>
             </div>
         </div></div>
         <a href="settings2.html" rel="noopener" class="settings-item settings-item-button"><div class="settings-item-inner">
             <div class="settings-item-left">
-                <div class="settings-item-label">View more settings on the Settings page</div>
+                <div class="settings-item-label">More customization options are available on the Settings page</div>
             </div>
             <div class="settings-item-right open-panel-button-container">
                 <button class="icon-button"><span class="icon-button-inner"><span class="icon" data-icon="material-right-arrow"></span></span></button>
