Add note errors (#1329)
* Update _addAnkiNote to track errors

* Change comparison

* Update anki note adding to show errors

* Fix template

* Show errors when Anki card creation behaves unexpectedly

* Update some errors related to anki media injection

* Update addAnkiNote error handling

* Improve Anki errors

* Simplify error messages related to template rendering

--- a/ext/mixed/display-templates.html
+++ b/ext/mixed/display-templates.html
@@ -145,6 +145,11 @@
 <template id="footer-notification-tag-details-template" data-remove-whitespace-text="true">
     <div class="tag-details"></div>
     <div class="tag-details-disambiguation-list"></div>
+</template>
+<template id="footer-notification-anki-errors-content-template" data-remove-whitespace-text="true"><div class="anki-note-error-info">
+    <div class="anki-note-error-header"></div>
+    <ul class="anki-note-error-list"></ul>
+    <div class="anki-note-error-log-container"><a class="anki-note-error-log-link">Log debug info to console</a></div>
 </div></template>
 <template id="profile-list-item-template"><label class="profile-list-item">
     <div class="profile-list-item-selection"><label class="radio"><input type="radio" class="profile-entry-is-default-radio" name="profile-entry-default-radio"><span class="radio-body"><span class="radio-border"></span><span class="radio-dot"></span></span></label></div>
